--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no">
 <meta name="format-detection" content="address=no">
-<meta name="author" content="Toan Nam"/>
-<meta name="description" content="Thông tin cá nhân - Toan Nam " />
+<meta name="author" content="Hong Lam"/>
+<meta name="description" content="Info HLam" />
 <meta
-	content='Toan Nam'
+	content='Hong Lam'
 	name='keywords' />
 <meta content='assets/images/meo.png' property='og:image' />
 <!-- Twitter data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@0338309151">
-<meta name="twitter:title" content="Lê Toàn Nam - Chương Mỹ">
-<meta name="twitter:description" content="Thông tin cá nhân - Toàn Nam">
+<meta name="twitter:title" content="Thái Hồng Lâm Deeptry">
+<meta name="twitter:description" content="Info HLam">
 <meta name="twitter:image" content="assets/anhphu/meo.png">
 
 <!-- Open Graph data -->
-<meta property="og:title" content="Lê Toàn Nam - Chương Mỹ" />
+<meta property="og:title" content="Thái Hồng Lâm Deeptry" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" />
 <meta property="og:image" content="assets/anhphu/mo.png" />
-<meta property="og:description" content="Thông tin cá nhân - Toàn Nam" />
-<meta property="og:site_name" content="Hiếu Tlu - About" />
+<meta property="og:description" content="Info HLam" />
+<meta property="og:site_name" content="Info HLam" />
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-touch-icon-144x144.png">
@@ -180,19 +180,19 @@
 								</g>
 							</svg>
 							<div class="text-center">
-								<h4 class="title titl--h3">Lê Toàn Nam <img height="20"
+								<h4 class="title titl--h3">Thái Hồng Lâm <img height="20"
 										src=" https://ngocminh.it/all/svg/tich-xanh.svg" width="20"></h4>
 								<div class="badge badge--light">Developer - Designer - Coder</div>
 
 								<!-- Social -->
 								<div class="social">
-									<a class="social__link" href="https://www.facebook.com/profile.php?id=1137907024 "><i
+									<a class="social__link" href="https://www.facebook.com/THL.VN.BLACKPINK"><i
 											class="font-icon icon-facebook"></i></a>
-									<a class="social__link" href="https://www.instagram.com/toannam.profile/"><i
+									<a class="social__link" href="https://www.instagram.com/hoglam.a/"><i
 											class="font-icon icon-instagram"></i></a>
-									<a class="social__link" href="tel:0338309151"><i
+									<a class="social__link" href="tel:xxxx xxx xxx"><i
 											class="font-icon icon-phone"></i></a>
-									<a class="social__link" href="mailto: toannamcuti@hotmail.com"><i
+									<a class="social__link" href="mailto: lamvyhuyenhan2008@gmail.com"><i
 											class="font-icon icon-google"></i></a>
 								</div>
 							</div>
@@ -201,19 +201,19 @@
 								<ul class="contacts-block">
 									<li class="contacts-block__item" data-toggle="tooltip" data-placement="top"
 										title="Birthday">
-										<i class="font-icon icon-calendar"></i>08/12/2008
+										<i class="font-icon icon-calendar"></i>10/07/2008
 									</li>
 									<li class="contacts-block__item" data-toggle="tooltip" data-placement="top"
 										title="Address">
-										<i class="font-icon icon-location"></i> Chương Mỹ - Hà Nội, Vietnam
+										<i class="font-icon icon-location"></i> Ben, Bến Tre, Việt Nam
 									</li>
 									<li class="contacts-block__item" data-toggle="tooltip" data-placement="top"
 										title="Email">
-										<i class="font-icon icon-envelope"></i>toannamcuti@hotmail.com</a>
+										<i class="font-icon icon-envelope"></i>lamvyhuyenhan2008@gmail.com</a>
 									</li>
 									<li class="contacts-block__item" data-toggle="tooltip" data-placement="top"
 										title="Phone">
-										<i class="font-icon icon-phone"></i>0338309151
+										<i class="font-icon icon-phone"></i>xxxx xxx xxx
 									</li>
 									</li>
 								</ul>
@@ -235,9 +235,9 @@
 								<ul class="nav">
 									<li class="nav__item"><a class="active" href="index.html">Home</a></li>
 									<li class="nav__item"><a href="#">MXH</a></li>
-									<li class="nav__item"><a href="https://zalo.me/0338309151">Zalo</a></li>
+									<li class="nav__item"><a href="http://zaloapp.com/qr/p/qv8uo1t771hm">Zalo</a></li>
 									<li class="nav__item"><a
-											href="https://www.facebook.com/profile.php?id=1137907024">Facebook</a></li>
+											href="https://www.facebook.com/THL.VN.BLACKPINK">Facebook (Talk)</a></li>
 									<li class="nav__item"><a href="#">Story</a></li>
 								</ul>
 							</div>
@@ -258,23 +258,23 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">0338309151</h5>
+												<h5 class="title title--h5 timeline__title">0353843563</h5>
 												<span
-													onclick="window.open('https://me.momo.vn/0338309151', '_blank')">
-													Lê Toàn Nam</span>
+													onclick="window.open('https://me.momo.vn/0353843563', '_blank')">
+													NGUYEN THI NGOC MAI</span>
 											</article>
 										</div>
 									</div>
 
 									<div class="col-12 col-lg-6">
 										<h2 class="title title--h3"><img class="title-icon"
-												src=" https://i.imgur.com/BrQMoBB.jpeg" alt="">VIETCOMBANK</h2>
+												src="https://i.imgur.com/fHoxejI.jpg" alt="">MB BANK</h2>
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
 												<h5 class="title title--h5 timeline__title">Chưa Có</h5>
 												<span 
-												 onclick="window.open('https://vietcomban.com', '_blank')"> Lê Toàn Nam</span>
+												 onclick="window.open('https://www.mbbank.com.vn/', '_blank')"> NGUYEN THI NGOC MAI</span>
 											</article>
 										</div>
 									</div>
@@ -285,10 +285,10 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Chưa Có</h5>
+												<h5 class="title title--h5 timeline__title">Mất rồi =))</h5>
 												<span
-													onclick="window.open('https://www.facebook.com/profile.php?id=1137907024'_blank')">
-													Lê Toàn Nam</span>
+													onclick="window.open('/'_blank')">
+													Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
@@ -300,10 +300,10 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Chưa Có</h5>
+												<h5 class="title title--h5 timeline__title">0311611122703</h5>
 												<span
-													onclick="window.open('https://www.facebook.com/profile.php?id=1137907024'_blank')">
-													Lê Toàn Nam </span>
+													onclick="window.open('/'_blank')">
+													NGUYEN THI NGOC MAI</span>
 											</article>
 
 										</div>
@@ -313,7 +313,7 @@ src="https://i.imgur.com/PIqngjP.png"
 
 							<div class="pb-0 pb-sm-2">
 								<h1 class=""></h1>
-								<h1 class="title title--h1 title__separate">Thông Tin Liên Hệ</h1>
+								<h1 class="title title--h1 title__separate">Contact</h1>
 								<div class="row">
 									<div class="col-12 col-lg-6">
 										<h2 class="title title--h3"><img class="title-icon"
@@ -324,8 +324,8 @@ src="https://i.imgur.com/PIqngjP.png"
 											<article class="timeline__item">
 												<h5 class="title title--h5 timeline__title">id: 1137907024</h5>
 												<span
-													onclick="window.open('https://www.facebook.com/profile.php?id=1137907024', '_blank')">
-												Lê Toàn Nam</span>
+													onclick="window.open('https://www.facebook.com/THL.VN.BLACKPINK', '_blank')">
+												Lâm Em </span>
 											</article>
 										</div>
 									</div>
@@ -337,9 +337,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">@toannam.profile</h5>
+												<h5 class="title title--h5 timeline__title">@hoglam.a</h5>
 												<span
-													onclick="window.open('https://www.instagram.com/toannam.profile/', '_blank')">
+													onclick="window.open('https://www.instagram.com/hoglam.a/', '_blank')">
 													Lê Toàn Nam</span>
 											</article>
 										</div>
@@ -351,9 +351,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">0338309151</h5>
-												<span onclick="window.open('https://zalo.me/0338309151', '_blank')">
-												Toàn Nam</span>
+												<h5 class="title title--h5 timeline__title">http://zaloapp.com/qr/p/qv8uo1t771hm </h5>
+												<span onclick="window.open('http://zaloapp.com/qr/p/qv8uo1t771hm ', '_blank')">
+												Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
@@ -364,8 +364,8 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">0338309151</h5>
-												<span onclick="window.open('tel:0338309151', '_blank')"> Lê Toàn Nam</span>
+												<h5 class="title title--h5 timeline__title">Tự mò đi =))</h5>
+												<span onclick="window.open('tel:xxxx xxx xxx', '_blank')"> Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
@@ -389,9 +389,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">@letoannam</h5>
-												<span onclick="window.open('https://youtube.com/@letoannam', '_blank')">
-													Lê Toàn Nam</span>
+												<h5 class="title title--h5 timeline__title">@thglamytb</h5>
+												<span onclick="window.open('https://youtube.com/@thglamytb', '_blank')">
+													Hoàng Quyên Tutorial</span>
 											</article>
 										</div>
 									</div>
@@ -402,9 +402,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">@toannamcuti</h5>
+												<h5 class="title title--h5 timeline__title">@hoglam.a</h5>
 												<span
-													onclick="window.open('https://tiktok.com/@toannamcuti', '_blank')">
+													onclick="window.open('https://tiktok.com/@hoglam.a', '_blank')">
 													Toàn Nam</span>
 											</article>
 										</div>
@@ -416,9 +416,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">toannamcuti@hotmail.com</h5>
+												<h5 class="title title--h5 timeline__title">lamvyhuyenhan2008@gmail.com</h5>
 												<span
-													onclick="window.open('mailto: toannamcuti@hotmail.com', '_blank')">
+													onclick="window.open('mailto:lamvyhuyenhan2008@gmail.com', '_blank')">
 						        Hiếu Tlu</span>
 											</article>
 										</div>
@@ -435,9 +435,8 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="case-item box box__second">
 											<img class="case-item__icon" src="assets/icons/icon-dev.svg" alt="" />
 											<div>
-												<h3 class="title title--h5">Phát triển web</h3>
-												<p class="case-item__caption">Phát triển chất lượng cao bảo mật các trang web 
-													ở cấp độ chuyên nghiệp.</p>
+												<h3 class="title title--h5">Developer</h3>
+												<p class="case-item__caption">Một nhà phát triển trang web ở nền tảng Blogspot, Html,...</p>
 											</div>
 										</div>
 									</div>
@@ -448,9 +447,8 @@ src="https://i.imgur.com/PIqngjP.png"
 											<img class="case-item__icon"
 												src="https://vuminhngoc.dev/assets/icons/icon-app.svg" alt="" />
 											<div>
-												<h3 class="title title--h5">Phát triển ứng dụng di động</h3>
-												<p class="case-item__caption"> Phát triển chuyên nghiệp
-												  các ứng dụng cho IOS và Android.</p>
+												<h3 class="title title--h5">Studying</h3>
+												<p class="case-item__caption"> Ngoài việc social media mình còn học trên 9. và có thành tích tại môn Hóa.</p>
 											</div>
 										</div>
 									</div>
@@ -463,28 +461,17 @@ src="https://i.imgur.com/PIqngjP.png"
 								<div class="box-inner box-inner--rounded">
 									<div class="row">
 										<div class="col-12 col-lg-6">
-											<h2 class="title title--h3">Kỹ năng thiết kế</h2>
+											<h2 class="title title--h3">Skills</h2>
 											<div class="box box__second">
 												<!-- Progress -->
 												<div class="progress">
 													<div class="progress-bar" role="progressbar" aria-valuenow="80"
 														aria-valuemin="0" aria-valuemax="100"
 														style="width: 80%; z-index: 2;">
-														<div class="progress-text"><span>Web
-																Design</span><span>80%</span></div>
+														<div class="progress-text"><span>Web Skills
+															</span><span>80%</span></div>
 													</div>
 													<div class="progress-text"><span>Web Design</span></div>
-												</div>
-
-												<!-- Progress -->
-												<div class="progress">
-													<div class="progress-bar" role="progressbar" aria-valuenow="75"
-														aria-valuemin="0" aria-valuemax="100"
-														style="width: 75%; z-index: 2;">
-														<div class="progress-text"><span>Graphic
-																Design</span><span>75%</span></div>
-													</div>
-													<div class="progress-text"><span>Graphic Design</span></div>
 												</div>
 
 												<!-- Progress -->
@@ -492,10 +479,20 @@ src="https://i.imgur.com/PIqngjP.png"
 													<div class="progress-bar" role="progressbar" aria-valuenow="90"
 														aria-valuemin="0" aria-valuemax="100"
 														style="width: 90%; z-index: 2;">
-														<div class="progress-text">
-															<span>Photoshop</span><span>90%</span></div>
+														<div class="progress-text"><span>Writter of newspaper</span><span>90℅</span></div>
 													</div>
-													<div class="progress-text"><span>Photoshop</span></div>
+													<div class="progress-text"><span>Studying</span></div>
+												</div>
+
+												<!-- Progress -->
+												<div class="progress">
+													<div class="progress-bar" role="progressbar" aria-valuenow="60"
+														aria-valuemin="0" aria-valuemax="100"
+														style="width: 60%; z-index: 2;">
+														<div class="progress-text">
+															<span>Creator Content</span><span>60%</span></div>
+													</div>
+													<div class="progress-text"><span>Creator Content</span></div>
 												</div>
 
 												<!-- Progress -->
@@ -573,24 +570,24 @@ src="https://i.imgur.com/PIqngjP.png"
 								<div class="row">
 									<div class="col-12 col-lg-6">
 										<h2 class="title title--h3"><img class="title-icon"
-												src="assets/icons/icon-education.svg" alt="" /> Trường Học</h2>
+												src="assets/icons/icon-education.svg" alt="" /> School</h2>
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Trường Tiểu Học Nam Phương Tiến A
+												<h5 class="title title--h5 timeline__title">Trường Tiểu Học Thị Trấn Mỏ Cày 2
 											  </h5>
-												<span class="timeline__period">Chương Mỹ - Hà Nội </span>
+												<span class="timeline__period">Ben, Bến Tre, Việt Nam</span>
 											</article>
 
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Trường THCS Nam Phương Tiến A</h5>
-												<span class="timeline__period">Chương Mỹ - Hà Nội</span>
+												<h5 class="title title--h5 timeline__title">Trường THCS Thị trấn Mỏ Cày</h5>
+												<span class="timeline__period">Ben, Bến Tre, Việt Nam</span>
 											</article>
 
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Tháng 6/2023 Rồi Biết =))</h5>
-												<span class="timeline__period">Hà Nội</span>
+												<h5 class="title title--h5 timeline__title">Trường THPT Che Guevara</h5>
+												<span class="timeline__period">Mong đậu nguyện vọng 1 (＾3＾♪</span>
 											</article>
 
 										</div>
@@ -598,17 +595,17 @@ src="https://i.imgur.com/PIqngjP.png"
 
 									<div class="col-12 col-lg-6">
 										<h2 class="title title--h3"><img class="title-icon"
-												src="assets/icons/icon-experience.svg" alt="" /> Làm Việc Tại</h2>
+												src="assets/icons/icon-experience.svg" alt="" /> Work at (admin)</h2>
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Hatoki Company</h5>
-												<span class="timeline__period">@hatoki-ddos</span>
+												<h5 class="title title--h5 timeline__title">Cực Phẩm GenZ</h5>
+												<span class="timeline__period">@www.cucphamgenz.vn</span>
 											</article>
 
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Bounty Hunter</h5>
-												<span class="timeline__period">@hatoki-ddos</span>
+												<h5 class="title title--h5 timeline__title">Văn Hóa 247</h5>
+												<span class="timeline__period">@www.vanhoa247.vn</span>
 											</article>
 										</div>
 									</div>
@@ -617,7 +614,7 @@ src="https://i.imgur.com/PIqngjP.png"
 
 
 							<!-- Footer -->
-							<footer class="footer">© Vận Hành Bởi Lê Toàn Nam</footer>
+							<footer class="footer">© Copyright Thái Hồng Lâm</footer>
 						</div>
 					</div>
 				</div>
