--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8" />
-<title>Xin Giới Thiệu Chút Profile</title>
+<title>IMy Info ~</title>
 <!-- Meta Data -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -180,9 +180,9 @@
 								</g>
 							</svg>
 							<div class="text-center">
-								<h4 class="title titl--h3">Thái Hồng Lâm <img height="20"
+								<h4 class="title titl--h3">Thái Hồng Lâm (I'm girl) <img height="20"
 										src=" https://ngocminh.it/all/svg/tich-xanh.svg" width="20"></h4>
-								<div class="badge badge--light">Developer - Designer - Coder</div>
+								<div class="badge badge--light">Developer - Designer - Student</div>
 
 								<!-- Social -->
 								<div class="social">
@@ -322,7 +322,7 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">id: 1137907024</h5>
+												<h5 class="title title--h5 timeline__title">id: THL.VN.BLACKPINK</h5>
 												<span
 													onclick="window.open('https://www.facebook.com/THL.VN.BLACKPINK', '_blank')">
 												Lâm Em </span>
@@ -340,7 +340,7 @@ src="https://i.imgur.com/PIqngjP.png"
 												<h5 class="title title--h5 timeline__title">@hoglam.a</h5>
 												<span
 													onclick="window.open('https://www.instagram.com/hoglam.a/', '_blank')">
-													Lê Toàn Nam</span>
+													Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
@@ -351,7 +351,7 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">http://zaloapp.com/qr/p/qv8uo1t771hm </h5>
+												<h5 class="title title--h5 timeline__title">Click vào bên dướii</h5>
 												<span onclick="window.open('http://zaloapp.com/qr/p/qv8uo1t771hm ', '_blank')">
 												Thái Hồng Lâm</span>
 											</article>
@@ -405,7 +405,7 @@ src="https://i.imgur.com/PIqngjP.png"
 												<h5 class="title title--h5 timeline__title">@hoglam.a</h5>
 												<span
 													onclick="window.open('https://tiktok.com/@hoglam.a', '_blank')">
-													Toàn Nam</span>
+													Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
@@ -419,14 +419,14 @@ src="https://i.imgur.com/PIqngjP.png"
 												<h5 class="title title--h5 timeline__title">lamvyhuyenhan2008@gmail.com</h5>
 												<span
 													onclick="window.open('mailto:lamvyhuyenhan2008@gmail.com', '_blank')">
-						        Hiếu Tlu</span>
+						        Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="pb-0 pb-sm-2">
-								<h1 class="title title--h1 title__separate">Tôi có thể làm gì</h1>
+								<h1 class="title title--h1 title__separate">What can i do ?</h1>
 
 								<div class="row">
 
