--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8" />
-<title>IMy Info ~</title>
+<title>My Info ~</title>
 <!-- Meta Data -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no">
 <meta name="format-detection" content="address=no">
 <meta name="author" content="Hong Lam"/>
-<meta name="description" content="Info HLam" />
+<meta name="description" content="Chill ke cùng HLam ~" />
 <meta
 	content='Hong Lam'
 	name='keywords' />
@@ -17,7 +17,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@0338309151">
 <meta name="twitter:title" content="Thái Hồng Lâm Deeptry">
-<meta name="twitter:description" content="Info HLam">
+<meta name="twitter:description" content="Chill ke cùng HLam ~">
 <meta name="twitter:image" content="assets/anhphu/meo.png">
 
 <!-- Open Graph data -->
@@ -25,8 +25,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" />
 <meta property="og:image" content="assets/anhphu/mo.png" />
-<meta property="og:description" content="Info HLam" />
-<meta property="og:site_name" content="Info HLam" />
+<meta property="og:description" content="Chill ke cùng HLam ~" />
+<meta property="og:site_name" content="Chill ke cùng HLam ~" />
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-touch-icon-144x144.png">
@@ -108,11 +108,11 @@
 			if (element.className == 'no-touch translated-ltr') {
 				setCookie("theme", 'dark-mode');
 				element.classList.toggle("dark-mode");
-				document.querySelector('button[onclick="mode()"]').innerHTML = "Tắt Đèn";
+				document.querySelector('button[onclick="mode()"]').innerHTML = "Lightmode";
 			} else {
 				setCookie("theme", '');
 				element.classList.toggle("dark-mode");
-				document.querySelector('button[onclick="mode()"]').innerHTML = "Bật Đèn";
+				document.querySelector('button[onclick="mode()"]').innerHTML = "Darkmode";
 
 			}
 		}
@@ -176,7 +176,7 @@
 
 							<svg class="avatar avatar--180" viewBox="0 0 188 188">
 								<g class="avatar__box">
-									<image xlink:href="/assets/anhphu/htbb.png" height="100%" width="100%" />
+									<image xlink:href="https://i.imgur.com/cx3iNBL.jpg" height="100%" width="100%" />
 								</g>
 							</svg>
 							<div class="text-center">
@@ -186,13 +186,13 @@
 
 								<!-- Social -->
 								<div class="social">
-									<a class="social__link" href="https://www.facebook.com/THL.VN.BLACKPINK"><i
+									<a class="social__link"href="https://www.facebook.com/THL.VN.BLACKPINK"><i
 											class="font-icon icon-facebook"></i></a>
-									<a class="social__link" href="https://www.instagram.com/hoglam.a/"><i
+									<a class="social__link"href="https://www.instagram.com/hoglam.a/"><i
 											class="font-icon icon-instagram"></i></a>
-									<a class="social__link" href="tel:xxxx xxx xxx"><i
+									<a class="social__link"href="tel:xxxx xxx xxx"><i
 											class="font-icon icon-phone"></i></a>
-									<a class="social__link" href="mailto: lamvyhuyenhan2008@gmail.com"><i
+									<a class="social__link"href="mailto: lamvyhuyenhan2008@gmail.com"><i
 											class="font-icon icon-google"></i></a>
 								</div>
 							</div>
@@ -248,7 +248,7 @@
 
 							<div class="pb-0 pb-sm-2">
 								<h1 class=""></h1>
-								<h1 class="title title--h1 title__separate">Thông Tin Thanh Toán</h1>
+								<h1 class="title title--h1 title__separate">Bank Info</h1>
 								<div class="row">
 									<div class="col-12 col-lg-6">
 										<h2 class="title title--h3"><img class="title-icon"
@@ -377,8 +377,8 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">@toannamle</h5>
-												<span onclick="window.open('https://t.me/toannamle', '_blank')"> Lê Toàn Nam</span>
+												<h5 class="title title--h5 timeline__title">@hoglamth</h5>
+												<span onclick="window.open('https://t.me/hoglamth', '_blank')"> Thái Hồng Lâm</span>
 											</article>
 										</div>
 									</div>
