--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta property="og:site_name" content="Chill ke cùng HLam ~" />
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://imgur.com/zsD1uPi.jpg">
 <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-touch-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-touch-icon-57x57.png">
