--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 											class="font-icon icon-facebook"></i></a>
 									<a class="social__link"href="https://www.instagram.com/hoglam.a/"><i
 											class="font-icon icon-instagram"></i></a>
-									<a class="social__link"href="tel:xxxx xxx xxx"><i
-											class="font-icon icon-phone"></i></a>
+									<a class="social__link"href="https://github.com/FreenBeckyisreal"><i
+											class="font-icon icon-github"></i></a>
 									<a class="social__link"href="mailto: lamvyhuyenhan2008@gmail.com"><i
 											class="font-icon icon-google"></i></a>
 								</div>
