--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 									</li>
 									<li class="contacts-block__item" data-toggle="tooltip" data-placement="top"
 										title="Phone">
-										<i class="font-icon icon-phone"></i>xxxx xxx xxx
+										<i class="font-icon icon-heart"></i>xxxx xxx xxx
 									</li>
 									</li>
 								</ul>
@@ -351,7 +351,7 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">Click vào bên dướii</h5>
+												<h5 class="title title--h5 timeline__title">0363848291</h5>
 												<span onclick="window.open('http://zaloapp.com/qr/p/qv8uo1t771hm ', '_blank')">
 												Thái Hồng Lâm</span>
 											</article>
