--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 								</g>
 							</svg>
 							<div class="text-center">
-								<h4 class="title titl--h3">Thái Hồng Lâm (Girl hai má<i class="fad fa-map-pin rung"></i>) <img height="20"
+								<h4 class="title titl--h3">Thái Hồng Lâm (Girl ha<i class="fad fa-map-pin rung"></i> mái) <img height="20"
 										src=" https://ngocminh.it/all/svg/tich-xanh.svg" width="20"></h4>
 								<div class="badge badge--light">Developer - Designer - Student</div>
 
