--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@ src="https://i.imgur.com/PIqngjP.png"
 										<div class="timeline">
 											<!-- Item -->
 											<article class="timeline__item">
-												<h5 class="title title--h5 timeline__title">0353843563</h5>
+												<h5 class="title title--h5 timeline__title">    </h5>
 												<span
-													onclick="window.open('https://me.momo.vn/0353843563', '_blank')">
+													onclick="window.open('/', '_blank')">
 													NGUYEN THI NGOC MAI</span>
 											</article>
 										</div>
