--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ src="https://i.imgur.com/PIqngjP.png"
 											<article class="timeline__item">
 												<h5 class="title title--h5 timeline__title">@thglamytb</h5>
 												<span onclick="window.open('https://youtube.com/@thglamytb', '_blank')">
-													Hoàng Quyên Tutorial</span>
+													Thái Hồng Lâm (Hoàng Quyên Tutorial)</span>
 											</article>
 										</div>
 									</div>
