--- a/index.html
+++ b/index.html
@@ -189,8 +189,10 @@
 								</g>
 							</svg>
 							<div class="text-center">
-								<h4 class="title titl--h3"><i class="fas fa-text rung"></i>hái Hồng Lâm (Girl ha<i class="fad fa-map-pin rung"></i> mái) <img height="20"
-										src=" https://ngocminh.it/all/svg/tich-xanh.svg" width="20"></h4>
+								<h4 class="title titl--h3"><i class="fas fa-text rung"></i>hái Hồng Lâm (Girl ha<i class="fad fa-map-pin rung"></i> mái)<svg style='width:13px;height:20px' viewbox='0 0.9 23 23'>
+<path d='M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9L10,17Z' fill='#1A73E8'/>
+
+</path></svg></h4>
 								<div class="badge badge--light">Developer - Designer - Student</div>
 
 								<!-- Social -->
